# da_agent

./: .gitignore  README.md  doc.txt  one_agent_langgraph.py  principle_agent.py  pyproject.toml  two_agent_langgraph.py
archive/: app.py  flask_server_api_test.py  nlp2py.py  py_exec.py
archive/runner/: app.py  dockerfile
backend/: BACKEND_README.md  README.dev.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/routes/: respond.py  upload.py
backend/app/core/: config.py
backend/app/domain/: analyse_job.py
backend/app/domain/prompts/: system.md
backend/app/scripts/: generate_dataset_map.py
backend/app/services/code_executor/: app.py  dockerfile
backend/app/services/llm/: client.py
backend/app/services/storage/: __init__.py  upload_index.py
backend/app/storage/raw_uploads/: 7861fe23-350e-4000-9fe6-efd5966d22f2__ASXListedCompanies (2).csv  tmp_1cd93f2454f6467ebb1fb3b3c03b6a70
backend/app/storage/upload_hash/: index.json
backend/storage/upload_hash/: by_dataset_id.json  by_hash.json  index.json
backend/tests/unit/: test_analyse_job.py  test_config.py
docker/: README.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts
prompts/: sys_prompt.txt
shared/: README.md
tools/: agent_class.py  rag_func.py
