[project]
name = "data-analyst-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "subliminated",email = "90996172+Subliminated@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (==0.135.1)",
    "aiofiles (==25.1.0)",
    "openai (==2.29.0)",
    "litellm (==1.82.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
