[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "subliminated",email = "90996172+Subliminated@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "uvicorn (==0.42.0)",
    "python-multipart (==0.0.22)",
    "openai (==1.68.2)",
    "litellm (==1.82.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
